#1607 The Home card are not center aligned on mobile screen fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1345,6 +1345,7 @@ p {
 
 @media (max-width: 767px) {
   .single-services {
+    margin: 0 auto;
     padding: 20px 20px 30px;
   }
 }
